# archi

./: .env.example  Makefile
backend/: pyproject.toml
backend/app/core/: __init__.py  factory.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/layout/: ThemeToggle.svelte  TopBar.svelte
frontend/src/lib/stores/: theme.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
