[project]
name = "archi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.0",
    "redis>=8.0.0",
    "aiohttp>=3.14.0",
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "black>=26.5.0"
]

[tool.ruff]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
